<resources>
        <string name="app_name">ColourMatch</string>
        <string name="score">0</string>
        <string name="startScore">Score: 0</string>
        <string name="game_over_state">Game Over!</string>
        <string name="three_by_three_state">3x3</string>
        <string name="four_by_four_state">4x4</string>
        <string name="three_by_three_hard_state">Expert</string>
        <string name="quit">Quit</string>
        <string name="settings">Settings</string>
        <string name="scoreboard">Scoreboard</string>
        <string name="start_game">Start Game</string>
        <string name="login">Login Register</string>
        <string name="text_accounts">All Accounts</string>
        <string name="hint_name">Name</string>
        <string name="hint_email">Email</string>
        <string name="hint_password">Password</string>
        <string name="hint_confirm_password">Confirm Password</string>
        <string name="text_login">Login</string>
        <string name="text_register">Register</string>
        <string name="error_message_name">Enter Full Name</string>
        <string name="error_message_email">Enter Valid Email</string>
        <string name="error_message_age">Enter Age</string>
        <string name="error_message_password">Enter Password</string>
        <string name="success_message">Registration Successful</string>
        <string name="text_not_member">No account yet? Create one</string>
        <string name="text_already_member">Already a member? Login</string>
        <string name="error_email_exists">Email Already Exists</string>
        <string name="error_password_match">Password Does Not Matches</string>
        <string name="error_valid_email_password">Wrong Email or Password</string>
        <string name="action_settings">Settings</string>
        <string name="text_hello">Hello,</string>
        <string name="text_title">Android Tutorials Hub</string>
</resources>
